--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-    Unreleased
+2014-12-14  Jamie Lentin  <jm@ravingmantis.com>
+
+    Version 1.1-1
 
     * Fix spelling mistakes in documentation, changelog
 
