DESCRIPTION: Title should be in title-case

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+    Unreleased
+
+    * DESCRIPTION: Title should be in title-case
+
 2014-12-14  Jamie Lentin  <jm@ravingmantis.com>
 
     Version 1.1-1
