--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
     Unreleased
 
+    * R/non_interactive_summary.R: End premature ending message with a \n
     * DESCRIPTION: Title should be in title-case
 
 2014-12-14  Jamie Lentin  <jm@ravingmantis.com>
