R/non_interactive_summary.R: Remove broken detection for tests ending prematurely
When using tryCatch(), any caught error condition will remain in the
geterrmessage() buffer. As a result, any code that uses tryCatch() will produce
spurious "script ended prematurely" messages.

If the test genuinely fails prematurely, then the exit status will be non-zero
so the error will be detected by "CMD check".

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
     Unreleased
 
-    * R/non_interactive_summary.R: End premature ending message with a \n
+    * R/non_interactive_summary.R: Remove broken detection for tests ending prematurely
     * DESCRIPTION: Title should be in title-case
 
 2014-12-14  Jamie Lentin  <jm@ravingmantis.com>
