--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
     Unreleased
 
-    * R/non_interactive_summary.R: Remove broken detection for tests ending prematurely
-    * DESCRIPTION: Title should be in title-case
+    * R/non_interactive_summary.R: Remove broken detection for tests ending prematurely.
+    * R/*.R man/*.Rd tests/*.R: Make the use of white space within parentheses consistent.
+    * DESCRIPTION: Title should be in title-case.
 
 2014-12-14  Jamie Lentin  <jm@ravingmantis.com>
 
