--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+    * R/ok.R (ok): Deparse the call object correctly when handling test errors
     * NAMESPACE: Declare that we use utils::capture.output
 
 2015-02-13  Jamie Lentin  <jm@ravingmantis.com>
