--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
+2016-12-03  Jamie Lentin  <jm@ravingmantis.com>
+
     * R/ok.R (ok): Add stacktrace as well as final failing call
     * R/ok.R (ok): Deparse the call object correctly when handling test errors
     * NAMESPACE: Declare that we use utils::capture.output
+    * vignettes/getting_started.Rnw: Content moved here from package unittest-package.Rd 
+    * vignettes/code_cookbook.Rnw: Content moved here from package unittest-package.Rd 
 
 2015-02-13  Jamie Lentin  <jm@ravingmantis.com>
 
