ok: Preserve empty lines in dignostic output
strsplit() doesn't preserve empty strings when splitting:

    > strsplit(c("a:b", "c", ""), ":")
    [[1]]
    [1] "a" "b"

    [[2]]
    [1] "c"

    [[3]]
    character(0)

This is a special case of a trailing match being ignored, which is
documented. The upshot of this is empty lines of diagnostic output are
filtered from ok() output. There's no other way of strsplit() generating a
zero-length vector though, so just put them back afterwards.

Don't worry about trailing newlines being eaten, since we don't want those
anyway.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+    * ok: Preserve empty lines in dignostic output
     * non_interactive_summary: Bail out message on fatal script errors
 
 2017-11-01  Jamie Lentin  <jm@ravingmantis.com>
