non_interactive_summary: Bail out message on fatal script errors
If a test setup crashed whilst in non-interactive mode, we used to display
the error (via. the default error-handler), but then display an apparently
successful final line "Looks like you passed all (x) tests".

Instead, add an error handler capturing the error lines and showing them
in proper TAP format. Include a traceback too, for good measure.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+    * non_interactive_summary: Bail out message on fatal script errors
+
 2017-11-01  Jamie Lentin  <jm@ravingmantis.com>
 
     Version 1.3-0
