--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-11-19 Jamie Lentin  <jm@ravingmantis.com>
+
+    Version 1.4-0
+
     * ut_cmp_*: Support comparing environments
     * ut_cmp_*: Graduate from example to included function
     * ut_cmp_error: Graduate from example to included function
