ut_cmp: Try different str options to coax out a difference #6
Increase str() detail until a difference is found.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+    * ut_cmp_*: Show more digits in diff output when required
     * ut_cmp_*: Windows path-related bugfixes
 
 2019-11-19 Jamie Lentin  <jm@ravingmantis.com>
