ut_cmp: Expose deparse_frame for nicer helpers #5
Wrapping ut_cmp_*() with another function to do some other work is
pretty common, in which case the "-1" should be "-2".

Expose as an option so helpers can show valid expressions in the diff
output.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+    * ut_cmp_*: Add deparse_frame option for nicer comparision helpers
     * ut_cmp_*: Show more digits in diff output when required
     * ut_cmp_*: Windows path-related bugfixes
 
