options: options(unittest.output) to redirect test output
The current advice for how to redirect output for vignettes is naff,
doesn't work with ok_group(), and will be problematic for future
detection for whether ANSI color codes should be enabled.

Instead, add an R options() that works with all unittest output, not
just ok().

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+    * options: options(unittest.output = ...) to redirect unittest output
     * ut_cmp_*: Support for r-devel-windows-x86_64-new-UL
     * ut_cmp_*: Add deparse_frame option for nicer comparision helpers
     * ut_cmp_*: Show more digits in diff output when required
