options: Disable git-diff colors where appropriate
Outputting escape codes all the time isn't very friendly, they're not
supported in e.g. CRAN output or the default R gui.

Instead, add some heuristics inspired by crayon::num_ansi_colors to try
and get this right in more cases. It may be better to just do
crayon::num_ansi_colors() > 1, but it adds an extra dependency.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+    * options: Disable git-diff colors where appropriate
     * options: options(unittest.output = ...) to redirect unittest output
     * ut_cmp_*: Support for r-devel-windows-x86_64-new-UL
     * ut_cmp_*: Add deparse_frame option for nicer comparision helpers
