vignettes/testing_packages: Don't try and run the CMD check example

--- a/vignettes/testing_packages.Rmd
+++ b/vignettes/testing_packages.Rmd
@@ -78,7 +78,7 @@ unittest will output colored diff output if it thinks it will be supported.
 By default it assumes that they are not supported in ``R CMD check``.
 If you would like to see a log in color you can do the following:
 
-```{bash}
+```{bash, eval=FALSE}
 R_CLI_NUM_COLORS=256 R CMD check ...
 less -R 00check.log
 ```
