--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-09-07 Jamie Lentin  <jm@lentin.co.uk>
+
+    Version 1.5-0
+
     * options: Disable git-diff colors where appropriate
     * options: options(unittest.output = ...) to redirect unittest output
     * ut_cmp_*: Support for r-devel-windows-x86_64-new-UL
