--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-09-07 Jamie Lentin  <jm@lentin.co.uk>
+
+    Version 1.5-1
+
     * NEWS: Convert to a R-devel compatible format
 
 2022-09-07 Jamie Lentin  <jm@lentin.co.uk>
