--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-09-25 Jamie Lentin  <jm@lentin.co.uk>
+
+    Version 1.5-3
+
     * README: Use canonical form of CRAN URL
 
 2022-09-25 Jamie Lentin  <jm@lentin.co.uk>
