--- a/ChangeLog
+++ b/ChangeLog
@@ -34,7 +34,7 @@
     * ut_cmp_*: Show more digits in diff output when required
     * ut_cmp_*: Windows path-related bugfixes
 
-2019-11-19 Jamie Lentin  <jm@ravingmantis.com>
+2019-11-19 Jamie Lentin  <lentinj@shuttlethread.com>
 
     Version 1.4-0
 
@@ -44,7 +44,7 @@
     * ok: Preserve empty lines in dignostic output
     * non_interactive_summary: Bail out message on fatal script errors
 
-2017-11-01  Jamie Lentin  <jm@ravingmantis.com>
+2017-11-01  Jamie Lentin  <lentinj@shuttlethread.com>
 
     Version 1.3-0
 
@@ -54,7 +54,7 @@
     * vignettes/getting_started.Rnw: Content moved here from package unittest-package.Rd 
     * vignettes/code_cookbook.Rnw: Content moved here from package unittest-package.Rd 
 
-2015-02-13  Jamie Lentin  <jm@ravingmantis.com>
+2015-02-13  Jamie Lentin  <lentinj@shuttlethread.com>
 
     Version 1.2-0
 
@@ -62,13 +62,13 @@
     * R/*.R man/*.Rd tests/*.R: Make the use of white space within parentheses consistent.
     * DESCRIPTION: Title should be in title-case.
 
-2014-12-14  Jamie Lentin  <jm@ravingmantis.com>
+2014-12-14  Jamie Lentin  <lentinj@shuttlethread.com>
 
     Version 1.1-1
 
     * Fix spelling mistakes in documentation, changelog
 
-2014-12-13  Jamie Lentin  <jm@ravingmantis.com>
+2014-12-13  Jamie Lentin  <lentinj@shuttlethread.com>
 
     Version 1.1-0
 
@@ -83,7 +83,7 @@
 
     * tests/test_non_interactive.R (run_script): stdout and stderr in system2 command to tmp files to avoid 'illegal seek' error on Solaris.
 
-2014-08-23  Jamie Lentin  <jm@ravingmantis.com>
+2014-08-23  Jamie Lentin  <lentinj@shuttlethread.com>
 
     Version 1.0-0
     Initial release.
