--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2024-01-10 Jamie Lentin  <jm@lentin.co.uk>
+
+    Version 1.6-1
+
+
+
     * DESCRIPTION: Updated maintainer e-mail addresses
 
 2023-05-04 Jamie Lentin  <jm@lentin.co.uk>
